@startuml Job.Broker classes
hide empty members

interface ILogger << Serilog >>
class ConsumerOptions << External >>
class ProducerOptions << External >>

class ConsumerBuilder << Confluent >>
class ProducerBuilder << Confluent >>

interface ISerializer<TType> << Confluent >>
{
    +byte[] Serialize(TType, SerializationContext)
}
interface IDeserializer<TType> << Confluent >>
{
    +TType Deserialize(ReadOnlySpan<byte>, bool, SerializationContext)
}

class JobMessage
{
    +Guid Id
    {method}+byte[] ToByteArray()
}

interface IBrokerConsumer<Guid, JobMessage> << External >>
IBrokerConsumer -> JobMessage
interface IBrokerProducer<Guid, JobMessage> << External >>
IBrokerProducer -> JobMessage

class GuidConverter<Guid>
ISerializer <|.. GuidConverter
IDeserializer <|.. GuidConverter

class JobMessageConverter<JobMessage>
ISerializer <|.. JobMessageConverter
IDeserializer <|.. JobMessageConverter
JobMessageConverter --> JobMessage

ConsumerBuilder --> IDeserializer
ConsumerBuilder --> ISerializer
ProducerBuilder --> IDeserializer
ProducerBuilder --> ISerializer

class JobConsumer
{
    -bool _disposed
    -IConsumer<Guid, JobMessage> _consumer
}
IBrokerConsumer <|.. JobConsumer
JobConsumer --> ConsumerOptions
JobConsumer --> ILogger
JobConsumer --> ConsumerBuilder

class JobProducer
{
    -bool _disposed
    -IProducer<Guid, JobMessage> _producer
}
IBrokerProducer <|.. JobProducer
JobProducer --> ProducerOptions
JobProducer --> ILogger
JobProducer --> ProducerBuilder

@enduml
